deps/chakrashim/core/test/Basics/label2.baseline
SyntaxError: Expected ';'
	at code (label2.js:8:8)
