deps/chakrashim/core/test/Basics/label2.js
//-------------------------------------------------------------------------------------------------------
// Copyright (C) Microsoft. All rights reserved.
// Licensed under the MIT license. See LICENSE.txt file in the project root for full license information.
//-------------------------------------------------------------------------------------------------------

function f() {
    // Bad label, verify consistency in deferred parsing
    a++:
        var i = 0;
}

f();
